--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@aws-sdk/client-s3": "^3.971.0",
     "@aws-sdk/s3-request-presigner": "^3.971.0",
     "@prisma/client": "^6.19.2",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.6.4",
     "inngest": "^3.49.3",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
